--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
       <button type="button" class="navbar-toggle collapsed" ng-click="isCollapsed = !isCollapsed">
         <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand" href="#">open[Fn]</a>
+      <a class="navbar-brand" href="/">open[Fn]</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse collapse" collapse="isCollapsed">
