--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -4,9 +4,9 @@
         margin-top: -20px;
         width: 100%;
         text-align: center;
-        background-color: $cream;
-        background-image: image-url("noise.png");
-        color: $light-grey;
+        // background-color: $cream;
+        // background-image: image-url("noise.png");
+        // color: $light-grey;
 
     }
 
@@ -20,38 +20,38 @@
 
       .featurette-heading {
         font-size: rem-calc(35px);
-        color: $primary-blue;
+        // color: $primary-blue;
         margin: 2rem 0;
-        background-color: $cream;
-        background-image: image-url("noise.png");
+        // background-color: $cream;
+        //background-image: image-url("noise.png");
       }
 
       p.lead {
-        color: $primary-blue;
+        // color: $primary-blue;
         font-size: 1.8rem;
         line-height: 2.8rem;
       }
       &.dark {
-        background-color: $deeper-blue;
-        background-image: image-url("noise.png");
+        // background-color: $deeper-blue;
+        //background-image: image-url("noise.png");
 
         .featurette-heading {
-          color: $off-white;
+          // color: $off-white;
         }
 
         p.lead {
-          color: $off-white;
+          // color: $off-white;
         }
       }
 
       &.mappings {
         
         .featurette-heading {
-          color: $off-white;
+          // color: $off-white;
         }
 
         p.lead {
-          color: $off-white;
+          // color: $off-white;
         }
       }
 
@@ -72,17 +72,17 @@
         padding: 0;
 
         &.light {
-          background-color: lighten($primary-blue, 51);
+          // background-color: lighten($primary-blue, 51);
         }
         &.dark {
-          background-color: $primary-blue;
+          // background-color: $primary-blue;
         }
       }
 
     }   
 
  .title {
-    color: $off-white;
+    // color: $off-white;
     font-size: rem-calc(28px);
     font-weight: $bold;
     text-transform: uppercase;
@@ -95,17 +95,17 @@
   }
 
   .content {
-    color: $off-white;
+    // color: $off-white;
   }
 
   .rn-content {
-    color: $off-white;
+    // color: $off-white;
     padding-top: 24px;
     padding-right: 24px;
   }
 
   .rn-title {
-    color: $off-white;
+    // color: $off-white;
     font-size: rem-calc(28px);
     font-weight: $bold;
     text-transform: uppercase;
@@ -119,7 +119,7 @@
   }
 
   .tile-tweet {
-    color: $off-white;
+    // color: $off-white;
     font-size: rem-calc(20px);
   }
 
@@ -128,17 +128,17 @@
   }
 
   .rating {
-   color: $off-white;
+   // color: $off-white;
   }
 
   .modal-header {
     border: 0;
-    background-color: #5A6C77;
-    background-image: inherit;
+    // background-color: #5A6C77;
+    // background-image: inherit;
   }
 
   .modal-title {
-    color: $off-white;
+    // color: $off-white;
     font-size: rem-calc(24px);
     font-weight: $bold;
     text-transform: uppercase;
@@ -147,7 +147,7 @@
   .modal-body {
 
     .mb-title {
-      color: $off-white;
+      // color: $off-white;
       font-size: rem-calc(18px);
       font-weight: $bold;
       text-transform: uppercase;
