--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,24 +6,23 @@
         margin-top: -30px;
         margin-bottom: -30px;
         width: 100%;
-        min-height: 835px;
+        min-height: 435px;
         text-align: center;
-        background-color: $primary-blue;
-        background-image: image-url("wow_bg.jpg");
+        //background-color: $primary-blue;
+        //background-image: image-url("wow_bg.jpg");
         
         /*background-repeat: no-repeat;*/
         background-position: top;
     }
 
     .header-detail {
-        background-image: image-url("wow_detail.png");
-        background-repeat: no-repeat;
-        background-position: top;
+        //background-image: image-url("wow_detail.png");
+        //background-repeat: no-repeat;
+        //background-position: top;
     }
 
     .headline {
         padding: rem-calc(80px) 0 rem-calc(25px);
-
 
     }
 
@@ -31,7 +30,7 @@
       font-size: rem-calc(35px);
       font-weight: $bold;
       text-transform: uppercase;
-      color: $off-white;
+      color: $primary-blue;
     }
 
     .numbers h3 {
@@ -57,7 +56,7 @@
     .featurette {
 
       background-color: $cream;
-      background-image: image-url("noise.png");
+      //background-image: image-url("noise.png");
 
       .featurette-heading {
         font-size: rem-calc(35px);
@@ -73,7 +72,7 @@
       }
       &.dark {
         background-color: $deeper-blue;
-        background-image: image-url("noise.png");
+        //background-image: image-url("noise.png");
 
         .featurette-heading {
           color: $off-white;
