--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,4 +1,5 @@
 // this is the old color--- $bg-color: #fffcf4, $cream: #fffcf4
+$nav: #F8F8F8;
 $cream: #ffffff;          //header and footer, featurette light
 $bg-color: #ffffff;       //main background color
 $bold: 700;
@@ -7,10 +8,11 @@ $semi-bold: 600;
 $primary-blue: #000000;   // dark blue, used to differentiate rows and featurettes from bg-color
 $deeper-blue: #ffffff;    // deeper blue, currently same as main background color
 $grey-blue: #ffffff;
-$off-white: #000000;
+$off-white: #428bca;
 $grey: #969795;
 $light-grey: #A3AAAB;
-$accent-yellow: #f8ca4d;  //dark yellow, used for live stats and accents
+$dynamic: #428bca;  //used for live stats and accents
+$accent-yellow: yellow;
 
 a:hover {
   text-decoration: none;
@@ -64,12 +66,8 @@ html, body {
     height: 68px;
     clear: both;
     // color: black;
-    // background-color: $accent-yellow;
+    background-color: $nav;
     padding-top: 12px;
-    // background-image: image-url("noise.png");
-    // -moz-box-shadow: 0 -8px 8px rgba(0,0,0,0.25);
-    // -webkit-box-shadow: 0 -8px 8px rgba(0,0,0,0.25);
-    // box-shadow: 0 -8px 8px rgba(0,0,0,0.25);
 }
 
 b, strong {
@@ -85,19 +83,6 @@ b, strong {
 //     position: absolute;
 //     bottom: 20px;
 // }
-
-.top-shadow {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 68px;
-    z-index: -1;
-    -webkit-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
-    -moz-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
-    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
-    display: none;
-  }
 
 .navbar {
 
@@ -172,11 +157,6 @@ b, strong {
 
 }
 
-.btn-meh {
-  // color: $off-white;
-  padding: 0;
-}
-
 .btn-map-label {
   padding-left: 2px;
 }
@@ -231,7 +211,7 @@ b, strong {
 
 
 .live {
-  color: $accent-yellow;
+  color: $dynamic;
 
   &.little {
     font-size: rem-calc(15px);
@@ -301,4 +281,273 @@ b, strong {
   font-size: rem-calc(18px);
   font-weight: $bold;
   text-transform: uppercase;;
+}
+
+    .header-image {
+        margin-top: -20px;
+        width: 100%;
+        text-align: center;
+        // background-color: $cream;
+        // background-image: image-url("noise.png");
+        // color: $light-grey;
+
+    }
+
+    .headline {
+        padding: rem-calc(55px) 0 rem-calc(50px);
+        padding-bottom: rem-calc(30px);
+    }
+
+
+    .featurette {
+
+      .featurette-heading {
+        font-size: rem-calc(35px);
+        // color: $primary-blue;
+        margin: 2rem 0;
+        // background-color: $cream;
+        //background-image: image-url("noise.png");
+      }
+
+      p.lead {
+        // color: $primary-blue;
+        font-size: 1.8rem;
+        line-height: 2.8rem;
+      }
+      &.dark {
+        // background-color: $deeper-blue;
+        //background-image: image-url("noise.png");
+
+        .featurette-heading {
+          // color: $off-white;
+        }
+
+        p.lead {
+          // color: $off-white;
+        }
+      }
+
+      &.mappings {
+        
+        .featurette-heading {
+          // color: $off-white;
+        }
+
+        p.lead {
+          // color: $off-white;
+        }
+      }
+
+      .container {
+        margin-top: rem-calc(30px);
+        margin-bottom: rem-calc(30px);
+      }
+
+      // overflow: hidden;
+
+      padding: 0;
+      margin: 0;
+
+      hr {
+        border: none;
+        height: rem-calc(10px);
+        margin: 0;
+        padding: 0;
+
+        &.light {
+          // background-color: lighten($primary-blue, 51);
+        }
+        &.dark {
+          // background-color: $primary-blue;
+        }
+      }
+
+    }   
+
+ .title {
+    // color: $off-white;
+    font-size: rem-calc(28px);
+    font-weight: $bold;
+    text-transform: uppercase;
+
+    &.show {
+      font-size: rem-calc(42px);
+      margin-top: -30px;
+      margin-bottom: -15px;
+    }
+  }
+
+  .content {
+    // color: $off-white;
+  }
+
+  .rn-content {
+    // color: $off-white;
+    padding-top: 24px;
+    padding-right: 24px;
+  }
+
+  .rn-title {
+    // color: $off-white;
+    font-size: rem-calc(28px);
+    font-weight: $bold;
+    text-transform: uppercase;
+    padding-right: 20px;
+
+    &.show {
+      font-size: rem-calc(42px);
+      margin-top: -30px;
+      margin-bottom: -15px;
+    }
+  }
+
+  .tile-tweet {
+    // color: $off-white;
+    font-size: rem-calc(20px);
+  }
+
+  .tile {
+    cursor: pointer;
+  }
+
+  .rating {
+   // color: $off-white;
+  }
+
+  .modal-header {
+    border: 0;
+    // background-color: #5A6C77;
+    // background-image: inherit;
+  }
+
+  .modal-title {
+    // color: $off-white;
+    font-size: rem-calc(24px);
+    font-weight: $bold;
+    text-transform: uppercase;
+  }
+
+  .modal-body {
+
+    .mb-title {
+      // color: $off-white;
+      font-size: rem-calc(18px);
+      font-weight: $bold;
+      text-transform: uppercase;
+    }
+
+  }
+
+  .table-striped > tbody > tr:nth-child(odd) > td,
+  .table-striped > tbody > tr:nth-child(odd) > th {
+    // background-color: #5A6C77;
+  }
+
+  .tabs-below, .tabs-right, .tabs-left {
+  .nav-tabs {
+    border-bottom: 0;
+  }
+}
+ 
+.tab-content > .tab-pane,
+.pill-content > .pill-pane {
+  display: none;
+}
+ 
+.tab-content > .active,
+.pill-content > .active {
+  display: block;
+}
+ 
+.tabs-below {
+  > .nav-tabs {
+    border-top: 1px solid #ddd;
+ 
+    > li {
+      margin-top: -1px;
+      margin-bottom: 0;
+ 
+      > a {
+        -webkit-border-radius: 0 0 4px 4px;
+           -moz-border-radius: 0 0 4px 4px;
+                border-radius: 0 0 4px 4px;
+ 
+        &:hover, &:focus {
+          border-top-color: #ddd;
+          border-bottom-color: transparent;
+        }
+      }
+    }
+    > .active a {
+      &, &:hover, &:focus {
+        border-color: transparent #ddd #ddd #ddd;
+      }
+    }
+  }
+}
+ 
+.tabs-left, .tabs-right {
+  > .nav-tabs > li {
+    float: none;
+ 
+    > a {
+      min-width: 74px;
+      margin-right: 0;
+      margin-bottom: 3px;
+    }
+  }
+}
+ 
+.tabs-left > .nav-tabs {
+  float: left;
+  margin-right: 19px;
+  border-right: 1px solid #ddd;
+ 
+  > li > a {
+    margin-right: -1px;
+    -webkit-border-radius: 4px 0 0 4px;
+       -moz-border-radius: 4px 0 0 4px;
+            border-radius: 4px 0 0 4px;
+ 
+    &:hover, &:focus {
+      // border-color: #eee #ddd #eee #eee;
+    }
+  }
+ 
+  > .active a {
+    &, &:hover, &:focus {
+      // border-color: #ddd transparent #ddd #ddd;
+      // *border-right-color: #fff;
+    }
+  }
+}
+ 
+.tabs-right > .nav-tabs {
+  float: right;
+  margin-left: 19px;
+  padding: 5px; 
+  // border-left: 1px solid #ddd;
+ 
+  > li > a {
+    // margin-left: -1px;
+    -webkit-border-radius: 6px 6px 6px 6px;
+       -moz-border-radius: 6px 6px 6px 6px;
+            border-radius: 6px 6px 6px 6px;
+            border: none;
+ 
+    &:hover, &:focus {
+      background-color: $bg-color;
+      color: $dynamic;
+      border: none;
+    }
+  }
+ 
+  > .active a {
+    &, &:hover, &:focus {
+      border: none;
+      // *border-left-color: #fff;
+      color: $dynamic;
+      background-color: $bg-color;
+    }
+  }
 }
