--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -45,7 +45,7 @@
     margin-bottom: 1.6em;
 
     .product:hover {
-      background-color: #5A6C77;
+      background-color: #428bca;
     }
 
     .product {
