--- a/app/assets/stylesheets/pricing.css.scss
+++ b/app/assets/stylesheets/pricing.css.scss
@@ -2,19 +2,19 @@
 
 body {
   padding-top: 40px;
-  background-color: #f5f5f5;
+  // background-color: #f5f5f5;
 }
 .flat .plan {
   border-radius: 6px;
   list-style: none;
   padding: 0 0 20px;
   margin: 0 0 15px;
-  background: #fff;
+  background: $nav;
   text-align: center;
 }
 .flat .plan li {
   padding: 10px 15px;
-  color: #ccc;
+  // color: #ccc;
   border-top: 1px solid #f5f5f5;
   -webkit-transition: 300ms;
   transition: 300ms;
@@ -28,8 +28,8 @@ body {
   padding: 15px;
   font-size: 24px;
   line-height: 24px;
-  color: #fff;
-  background: $grey-blue;
+  color: $off-white;
+  background: $primary-blue;
   margin-bottom: 30px;
   border-top: 0;  
 }
@@ -38,7 +38,7 @@ body {
 }
 
 .flat .plan li > strong {
-  color: $deeper-blue;
+  // color: $deeper-blue;
 }
 .flat .plan li.plan-action {
   margin-top: 10px;
@@ -51,6 +51,7 @@ body {
 }
 .flat .plan.featured li.plan-name {
   background: #000;
+  color: $off-white;
 }
 .flat .plan.featured:hover li.plan-name {
   background: #c0392b;
