--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -63,13 +63,13 @@
             <% end %>
           </li>
           <li>
-            <%= button_to "/signup", :class => "btn btn-success", method: :get do %>
+            <%= button_to "/signup", :class => "btn btn-default", method: :get do %>
               Sign up
             <% end %>
           </li>
         <% end %>
         <li>
-          <button onClick="ga('send', 'event', 'Revenue', 'Open Donate Modal');" type="button" data-toggle="modal" data-target="#donate_modal" class="btn btn-danger">Donate</button>
+          <button onClick="ga('send', 'event', 'Revenue', 'Open Donate Modal');" type="button" data-toggle="modal" data-target="#donate_modal" class="btn btn-default">Donate</button>
         </li>
       </ul>
     </div>
