--- a/app/assets/stylesheets/devs.css.scss
+++ b/app/assets/stylesheets/devs.css.scss
@@ -29,8 +29,8 @@
     padding: 15px;
     font-size: 24px;
     line-height: 24px;
-    color: #fff;
-    background: $primary-blue;
+    color: $light;
+    background: $base;
     margin-bottom: 30px;
     border-top: 0;  
   }
@@ -44,15 +44,15 @@
   }
 
   .flat .plan.featured li.plan-name {
-    background: #000;
+    background: $dark;
   }
 
   .flat .plan.featured:hover li.plan-name {
-    background: #c0392b;
+    background: $accent;
   }
 
   .flat .plan:hover li.plan-name {
-    background: #000;
+    background: $dark;
   }
 
 }
