--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,46 +6,47 @@
         width: 100%;
         min-height: 500px;
         text-align: center;
+        background-color: $dark;
     }
 
-    .header-detail {
+    // .header-detail {
         //background-image: image-url("wow_detail.png");
         //background-repeat: no-repeat;
         //background-position: top;
-    }
+    // }
 
     .headline {
         padding: rem-calc(80px) 0 rem-calc(5px);
-        margin-top: 60px;
+        margin-top: 30px;
     }
 
     .headline h3 {
       font-size: rem-calc(35px);
-      font-weight: $light;
+      font-weight: 100;
       text-transform: uppercase;
-      // color: $primary-blue;
+      color: $bg-color;
     }
 
     .numbers h3 {
         font-size: rem-calc(35px);
-        margin-bottom: 0;
+        margin-bottom: 5px;
         margin-top: 150px;
         // font-weight: $bold;
         // text-transform: uppercase;
         // color: $dynamic;
-        // opacity: 0.8;
+        opacity: 0.8;
     }
 
     .numbers h4 {
-        font-size: rem-calc(20px);
+        font-size: rem-calc(18px);
         // font-weight: $bold;
         margin-top: 0;
         text-transform: uppercase;
-        // color: $light-grey;
-        // opacity: 0.6;
+        color: $light-grey;
+        opacity: 0.6;
     }
 
-    .featurette {      
+    .featurette {
 
       .openmarket-featurette-image {
         background-image: image-url("openmarket-featurette.png");
@@ -69,7 +70,6 @@
         background-size: 100%;
         height: 351px;
         width: 376px;
-
       }
     } 
 
