--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,7 +6,7 @@
         width: 100%;
         min-height: 500px;
         text-align: center;
-        background-color: $dark;
+        background-color: $base;
     }
 
     // .header-detail {
@@ -18,6 +18,10 @@
     .headline {
         padding: rem-calc(80px) 0 rem-calc(5px);
         margin-top: 30px;
+    }
+
+    .samash {
+        color: red !important;
     }
 
     .headline h3 {
@@ -42,7 +46,7 @@
         // font-weight: $bold;
         margin-top: 0;
         text-transform: uppercase;
-        color: $light-grey;
+        color: $bg-color;
         opacity: 0.6;
     }
 
