--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -9,6 +9,7 @@ $light-grey: #787878;
 $base: #406DE4;
 $light: #E7F0FA;
 $accent: #FFBD31;
+$red-accent: #D84765;
 
 // These need to be removed, but log files, caches prevent removal.
 $off-white: red;      // deprecated
