--- a/app/assets/stylesheets/pricing.css.scss
+++ b/app/assets/stylesheets/pricing.css.scss
@@ -52,7 +52,7 @@
     color: $nav;
   }
   .flat .plan.featured:hover li.plan-name {
-    background: $accent;
+    background: $red-accent;
     color: $dark;
   }
   .flat .plan:hover li.plan-name {
