--- a/app/assets/stylesheets/devs.css.scss
+++ b/app/assets/stylesheets/devs.css.scss
@@ -48,7 +48,7 @@
   }
 
   .flat .plan.featured:hover li.plan-name {
-    background: $accent;
+    background: $red-accent;
   }
 
   .flat .plan:hover li.plan-name {
