--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -23,6 +23,11 @@
     min-width: 216px;
   }
 
+// fsField -- why is this here?
+  .search-field {
+    padding-bottom: 0.5em;
+  }
+
 }
 
 .product-list {
@@ -372,4 +377,73 @@
 
 .rscore {
   font-size: rem-calc(20px);
+}
+
+.tag-editor{
+  width: 658px;
+  height: 35px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
+  border: 1px solid #CCC;
+  cursor: text;
+  background-color: #FFF;
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-left: 210px;
+}
+
+.tag-editor .post-tag:first-child {
+    margin-left: 6px;
+}
+
+.tag-editor .post-tag {
+    margin: 6px 3px 0px;
+}
+
+.post-tag {
+  color: #3E6D8E;
+  font-size: 12px;
+  white-space: nowrap;
+  background: none repeat scroll 0% 0% #E4EDF4;
+  border: 1px solid #E4EDF4;
+  display: inline-block;
+  margin: 2px 2px 2px 0px;
+  border-radius: 0px;
+  transition: color 0.15s ease 0s, #F2F1F0 0.15s ease 0s, border 0.15s ease 0s;
+  padding: 0.25em 0.5em;
+  text-decoration: none;
+  line-height: 1;
+  float: left
+}
+
+.delete-tag {
+  width: 14px;
+  height: 14px;
+  vertical-align: middle;
+  display: inline-block;
+  background-position: -40px -319px;
+  cursor: pointer;
+  margin-left: 3px;
+  margin-top: 1px;
+  margin-bottom: -1px;
+}
+
+input[type="text"]{
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    background: none repeat scroll 0% 0% #FFF;
+    color: #444;
+    border: 1px solid #CCC;
+    font-size: 14px;
+    padding: 8px 10px;
+    float: left;
+}
+
+.tag-editor input {
+    border: medium none !important;
+    box-shadow: none !important;
+    outline: 0px none !important;
+    padding: 0px !important;
+    margin: 4px 3px 0px;
+    background-color: transparent !important;
+    height: 25px;
 }
