--- a/app/assets/stylesheets/mapping_fields.css.scss
+++ b/app/assets/stylesheets/mapping_fields.css.scss
@@ -22,6 +22,12 @@
 .list-group.sf-target {
   margin-bottom: 0px;
   min-height: 40px;
+  background-color: $nav;
+
+  &:hover {
+    background-color: $light;
+  }
+
 }
 
 .odk-field {
