--- a/app/views/odk_sf_legacy/mappings/_mapping.html.erb
+++ b/app/views/odk_sf_legacy/mappings/_mapping.html.erb
@@ -12,14 +12,14 @@
     Salesforce.com
   </td>
    
-  <td style="text-align:center" class="<% if mapping.enabled? %> success <% end %>">
+  <td style="text-align:center">
     <% if mapping.enabled? %>
       <span class='live'><i class="fa fa-check-circle fa-lg"></i></span>
     <% else %>
     <% end %>
   </td>
 
-  <td style="text-align:center" class="<% if mapping.active? %> success <% end %>">
+  <td style="text-align:center">
     <% if mapping.active? %>
       <span class='live'><i class="fa fa-bolt fa-lg"></i></span>
     <% else %>
