--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -69,7 +69,7 @@
           </li>
         <% end %>
         <li>
-          <button onClick="ga('send', 'event', 'Revenue', 'Open Donate Modal');" type="button" data-toggle="modal" data-target="#donate_modal" class="btn btn-default">Donate</button>
+          <button onClick="ga('send', 'event', 'Revenue', 'Open Donate Modal');" type="button" data-toggle="modal" data-target="#donate_modal" class="btn btn-open-donation">Donate</button>
         </li>
       </ul>
     </div>
@@ -89,10 +89,7 @@
             <h4 class="modal-title center" id="myModalLabel">Make a donation.</h4>
           </div>
           <div class="modal-body">
-            <strong>Thanks so much for your support</strong>. Before you continue, there are a couple of things you should know about this project.
-            <br>
-            <br>
-            OpenFn is a registered non-profit, but we don't yet have 501(c)3 approval.
+            <strong>Thanks so much for your support</strong>.
             <br>
             <br>
             We believe that we'll receive 501(c)3 approval in this tax year, 2015. When we are granted 501(c)3 status, all donations that were made previously will be recognized as tax deductible. To learn more, click <a href="http://www.irs.gov/Charities-&-Non-Profits/Charitable-Organizations/Contributions-to-Organization-with-IRS-Application-Pending" target="_blank">here.</a>
