--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,50 +1,46 @@
 .welcome {
 
+    #particles-js{
+        position: absolute;
+        top: 60px;
+        width: 100%;
+        height: 500px;
+        background-color: $base;
+        // background-image: url('');
+        // background-size: cover;
+        // background-position: 50% 50%;
+        // background-repeat: no-repeat;
+        // z-index: 100;
+    }
+
     .header-image {
-        margin-top: -30px;
-        margin-bottom: -30px;
         width: 100%;
         min-height: 500px;
         text-align: center;
-        background-color: $base;
     }
-
-    // .header-detail {
-        //background-image: image-url("wow_detail.png");
-        //background-repeat: no-repeat;
-        //background-position: top;
-    // }
 
     .headline {
-        padding: rem-calc(80px) 0 rem-calc(5px);
-        margin-top: 30px;
-    }
-
-    .samash {
-        color: red !important;
-    }
-
-    .headline h3 {
-      font-size: rem-calc(35px);
+      background-color : transparent;
+      padding-top: rem-calc(100px);
+      font-size: rem-calc(40px);
       font-weight: 100;
       text-transform: uppercase;
       color: $bg-color;
+      z-index: 10;
+    }
+
+    .numbers {
+      padding-top: 250px;
+      background-color : transparent;
     }
 
     .numbers h3 {
         font-size: rem-calc(35px);
-        margin-bottom: 5px;
-        margin-top: 150px;
-        // font-weight: $bold;
-        // text-transform: uppercase;
-        // color: $dynamic;
         opacity: 0.8;
     }
 
     .numbers h4 {
         font-size: rem-calc(18px);
-        // font-weight: $bold;
-        margin-top: 0;
         text-transform: uppercase;
         color: $bg-color;
         opacity: 0.6;
@@ -76,34 +72,5 @@
         width: 376px;
       }
     }
-
-html,body{ 
-    width:100%;
-    height:100%;
-    background:#111;
-}
-
-html{
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-body{
-  font:normal 75% Arial, Helvetica, sans-serif;
-}
-
-canvas{
-  display:block;
-  vertical-align:bottom;
-}
-
-#particles-js{
-  width: 100%;
-  height: 200px;
-  background-color: #b61924;
-  background-image: url('');
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-}
 
 }
