--- a/app/views/odk_sf_legacy/mappings/index.html.erb
+++ b/app/views/odk_sf_legacy/mappings/index.html.erb
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2 text-center">
-          <%= link_to "Create new map", "/mappings/new", class: 'btn btn-success' %>
+          <%= link_to "Create new map", "/mappings/new", class: 'btn btn-default' %>
           <br>
           <br>
           <div class="btn-group">
