--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -20,7 +20,7 @@
     }
 
     .headline {
-      background-color : transparent;
+      background-color: transparent;
       padding-top: rem-calc(100px);
       font-size: rem-calc(40px);
       font-weight: 100;
@@ -29,9 +29,22 @@
       z-index: 10;
     }
 
+    .logo {
+      background-image: image-url("square_white_logo.png");
+      background-repeat: no-repeat;
+      background-size: 100%;
+      opacity: 0.8;
+      height: 80px;
+      width: 80px;
+      position: absolute;
+      top: 290px;
+      left: 50%;
+      margin-left: -40px;
+    }
+
     .numbers {
       padding-top: 250px;
-      background-color : transparent;
+      background-color: transparent;
     }
 
     .numbers h3 {
