solved text box issue

--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -428,7 +428,7 @@
   margin-bottom: -1px;
 }
 
-input[type="text"]{
+.search-tags{
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     background: none repeat scroll 0% 0% #FFF;
     color: #444;
