--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -380,16 +380,16 @@
 }
 
 .tag-editor{
-  width: 658px;
+  // width: 658px;
   padding-bottom:5px;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
+  // box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
   border-bottom: 1px solid #000;
   cursor: text;
-  background-color: #FFF;
+  background-color: $bg-color;
   position: relative;
   overflow: hidden;
   white-space: nowrap;
-  margin-left: 210px;
+  // margin-left: 210px;
 }
 
 .tag-editor .post-tag:first-child {
@@ -401,10 +401,10 @@
 }
 
 .post-tag {
-  color: #3E6D8E;
+  color: $bg-color;
   font-size: 12px;
   white-space: nowrap;
-  background: none repeat scroll 0% 0% #E4EDF4;
+  background: none repeat scroll 0% 0% $base;
   border: 1px solid #E4EDF4;
   display: inline-block;
   margin: 2px 2px 2px 0px;
